...
        
        self.resultTextField.font = .preferredFont(forTextStyle: .body)
        self.resultTextField.adjustsFontForContentSizeCategory = true
        self.resultTextField.placeholder = "No result yet"
        self.resultTextField.text = String(describing: self.bdtsStepper.value)
        self.resultTextField.isEnabled = false
        self.resultTextField.accessibilityLabel = "Result of stepper"
        resultStackView.addArrangedSubview(self.resultTextField)
        
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: .compose,
                                                                 target: self, action: #selector(configure))
        
        let guide =  self.view.safeAreaLayoutGuide
...
