...
        self.minus.action = { [weak self] in
            self?.decrement()
        }
        self.addSubview(self.minus)
        
        self.plus.translatesAutoresizingMaskIntoConstraints = false
        self.plus.accessibilityLabel = "Stepper increment"
        self.plus.action = { [weak self] in
            self?.increment()
        }
        self.addSubview(self.plus)

        let constraints = [
...
