...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="111" translatesAutoresizingMaskIntoConstraints="NO" id="LKP-zI-YRT">
                                <rect key="frame" x="20" y="108" width="374" height="177"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMq-Kj-qDp">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="33"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                        <state key="normal" title="Test stepper"/>
                                        <connections>
                                            <segue destination="BYZ-38-t0r" kind="show" identifier="Test stepper" id="Rcg-lv-35H"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R2i-0J-xhC">
                                        <rect key="frame" x="0.0" y="144" width="374" height="33"/>
...
